apps/homelab/stirling-pdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  parentRefs:
    - name: gateway-external
      namespace: envoy-gateway-system
  hostnames:
    - pdf.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirling-pdf
          port: 8080
